force-app/main/default/objects/Server__c/Server__c.object-meta.xml
<CustomObject>
    <label>Server</label>
    <nameField>
        <label>Server Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>