force-app/main/default/objects/Server__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Id</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Servers</relationshipLabel>
    <relationshipName>Servers</relationshipName>
    <type>Lookup</type>
</CustomField>