force-app/main/default/objects/Server__c/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File Id</label>
    <referenceTo>File__c</referenceTo>
    <relationshipLabel>Servers</relationshipLabel>
    <relationshipName>Servers</relationshipName>
    <type>Lookup</type>
</CustomField>