force-app/main/default/objects/Server__c/fields/FileProcessed__c.field-meta.xml
<CustomField>
    <fullName>FileProcessed__c</fullName>
    <formula>SizeProcessed__c  / FileId__r.Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Processed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>