force-app/main/default/objects/Server__c/fields/SizeProcessed__c.field-meta.xml
<CustomField>
    <fullName>SizeProcessed__c</fullName>
    <label>Size Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>